--- a/index.html
+++ b/index.html
@@ -1,46 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Rock Paper Scissors</title>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+  <title>Rock Paper Scissors</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-              integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <script
-            src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+          integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+          crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-        <!-- Firebase Reference -->
+  <!-- Firebase Reference -->
 
-        <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
 
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-              <div class="game-area-wrapper col-lg-4">
-                <div id="player" class="game-area"></div>
-              </div>
-              <div class="game-area-wrapper col-lg-4">
-                <div id=board class="game-area"></div>
-              </div>
-              <div class="game-area-wrapper col-lg-4">
-                <div id="opponent" class="game-area"></div>
-              </div>
-            </div>
-        </div>
-        <script src="assets/js/main.js"></script>
-    </body>
+</head>
+<body>
+<div class="container">
+  <div id="start-row" class="row">
+    <div class="col-lg-4"></div>
+    <div id="start" class="input-group col-lg-4">
+      <span class="input-group-addon button" id="start-button">Start</span>
+      <input type="text" class="form-control" aria-describedby="basic-addon1" id="player-name">
+    </div>
+    <div class="col-lg-4"></div>
+  </div>
+  <div id="status-row" class="row">
+    <div id="status" class="col-lg-12"></div>
+  </div>
+
+  <div class="row">
+    <div class="game-area-wrapper col-lg-4">
+      <div id="player1" class="game-area">
+        <h2 class="text-center">Waiting for Player 1</h2>
+      </div>
+    </div>
+    <div class="game-area-wrapper col-lg-4">
+      <div id=board class="game-area"></div>
+    </div>
+    <div class="game-area-wrapper col-lg-4">
+      <div id="player2" class="game-area">
+        <h2 class="text-center">Waiting for Player 2</h2>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="assets/js/main.js"></script>
+</body>
 </html>
